[tool.poetry]
name = "programmingbitcoin"
version = "0.1.0"
description = ""
authors = ["Tony Guo <jijing.guo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
jupyterlab = "^2.1.3"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
black = "^19.10b0"
